examples/test/testpolicy8113.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8113
  namespace: namespace370
spec:
  podSelector:
    matchLabels:
      key19: value24
      key21: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value19
          key8: value4
      podSelector:
        matchLabels:
          key14: value25
          key33: value32
          key44: value26
